versioned_docs/version-25.0/Files/UI/Solution-Manager/Viewing-Job-Configuration.md
# Viewing Job Configuration

The **Operations** module allows you to retrieve the configuration for
a job if it:

- is completed or has started
- does not have a status of Waiting, On Hold, Cancelled, Missed
    Start Time, or Skipped

To view job configuration:

Click on the **Failed**, **Running**, or **Completed** operation dial or
use the **Quick Search** field (type the keyword and click **Enter**) in
the **Jobs** section on the **Operations Summary** page.

![Jobs Operation Dials](../../../Resources/Images/SM/Job-Operation-Dials2.png "Jobs Operation Dials")

The **Processes** page will display.

Select one **job** in the list. A record of your selection will display
in the [status bar](SM-UI-Layout.md#Status) at the bottom of the
page in the form of a breadcrumb trail.

![Job Processes](../../../Resources/Images/SM/Job-Processes2.png "Job Processes")

Click on the job record (e.g., 1 job(s)) in the status bar to display
the **Selection** panel.

:::note
As an alternative, you can right-click on the job selected in the list to display the **Selection** panel.
:::

Select the **Configuration** accordion-style tab in the panel.

![Job Configuration Tab in Operations](../../../Resources/Images/SM/Job-Configuration-Tab.png "Job Configuration Tab in Operations")

The Configuration tab allows an overarching view into the configuration of your daily job details with information regarding operations details, manual status changes, job time details, retry and recurrence information, and additional information based on the job type. Fields without a value will display \<None\> and fields that are user defined will have this icon: <img src="../../../Resources/Images/user-defined-icon.png" alt="User defined icon" title="User defined icon" width="25" />

![Job Configuration Panel in Operations](../../../Resources/Images/SM/Job-Configuration-Panel.png "Job Configuration Panel in Operations")

Close the **Selection** panel when done.

![White "person reading" icon on blue circular background](../../../Resources/Images/moreinfo-icon(48x48).png "More Info icon")
Related Topics

- [Performing Job Status     Changes](Performing-Job-Status-Changes.md)
- [Performing Schedule Status     Changes](Performing-Schedule-Status-Changes.md)
- [Performing Bulk Status Job Updates (Schedule     Level)](Performing-Bulk-Job-Status-Updates-Schedule-Level.md)
- [Performing Agent Status     Updates](Performing-Agent-Status-Updates.md)
- [Using PERT View](Using-PERT-View.md)
- [Managing Daily Processes](Managing-Daily-Processes.md)
- [Viewing Job Output](Viewing-Job-Output.md)
